# KBS1819

./: .gitignore  test.txt
CodeIRGame/CodeIRGame/: CMakeLists.txt
CodeIRGame/CodeIRGame/Core/: main.cpp
CodeIRGame/CodeIRGame/Data/: Decoding.cpp  Decoding.h  IRProtocol.cpp  IRProtocol.h  IRSendClass.cpp  IRSendClass.h  IRfrequency.cpp  IRfrequency.h  Receive.cpp  Receive.h
CodeIRGame/CodeIRGame/Tasks/: MainTaskClass.cpp  MainTaskClass.h
CodeIRGame/CodeIRGame/Utils/: TimerValue.cpp  TimerValue.h
Escape The Block/EscapeTheBlock/: EscapeTheBlock.ino
IRGame/: Blokken.cpp  Blokken.h  Homescreen.cpp  Homescreen.h  IRGame.atsln  IRgame.cppproj  IRgame.ino  Nunchuck.cpp  Nunchuck.h  SchermIntialisatie.cpp  SchermIntialisatie.h  charachter.cpp  charachter.h
IRGame/Main/: Main.atsln  Main.cppproj  Main.ino  Poppetje.cpp  Poppetje.h  main_upg_bak_636794464792076529.cpp.old
IRGame/__vm/: .IRgame.vsarduino.h
IRGameDev2/Main/: Main.componentinfo.xml  Main.cppproj  Main.ino
IRalles/: IRalles.atsln  IRalles.cppproj
IRalles/__vm/: .IRalles.vsarduino.h
IRgame_blokkenTest/: IRgame_blokkenTest.atsln  IRgame_blokkenTest.cppproj  IRgame_blokkenTest.ino
IRgame_blokkenTest/Debug/: IRgame_blokkenTest.with_bootloader.hex
IRgame_blokkenTest/Release/: IRgame_blokkenTest.with_bootloader.hex  board.buildinfo
IRgame_blokkenTest/__vm/: .IRgame_blokkenTest.vsarduino.h
Versie 1/IRalles/: IRalles.ino
game code daan/IRgame_blokken/: IRgame_blokken.ino
game code daan/IRgame_blokkenTest/: EscapeTheBlock.ino  IRgame_blokkenTest.atsln  IRgame_blokkenTest.cppproj  (+1 more)
(+243 files in other folders)
